fixed spacing on profile page and started work on individual panels for projects page

--- a/src/profilePage/infoCard.css
+++ b/src/profilePage/infoCard.css
@@ -5,14 +5,13 @@
 
 .infoContent {
   background: linear-gradient(to bottom, rgba(0, 25, 35, 1), rgba(0, 35, 25, 1));
+  padding: 0;
 }
 
 .infoContentHeader {
   display: flex;
   flex-direction: horizontal;
   height: 10px;
-  gap: 5px;
-
 }
 
 .infoContentHeaderTab {
@@ -24,7 +23,21 @@
   font-size: 15px; 
   font-family: 'JetBrains Mono', monospace;
   font-weight: 500; 
+  border-left: 2px solid rgba(90,185,185,0.25);
   background-color: rgba(0,0,0,0.4);
+  color: rgba(160, 190, 180, 1);
+}
+
+.infoContentHeaderSelectedTab {
+  height: 1;
+  width: 120px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 15px; 
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: 500; 
+  background-color: rgba(175,255,255,0.2);
   color: rgba(160, 190, 180, 1);
 }
 
@@ -37,13 +50,15 @@
   display: flex;
   flex-direction: horizontal;
   gap: 10px;
-  padding-top: 15px;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .editorLines {
   display: flex; 
   align-items: flex-start; 
   padding-right: 8px; 
+  padding-left: 8px;
   color: #4a6a7a; 
   font-family: 'JetBrains Mono', monospace; 
   font-size: 15px; 
