--- a/src/profilePage/profilePage.css
+++ b/src/profilePage/profilePage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
-  height:450px;
+  height:515px;
   justify-content: center;
   align-items: center;
 }
