--- a/src/projectsPage/Projects/Caresync.css
+++ b/src/projectsPage/Projects/Caresync.css
@@ -2,106 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap');
 
 .caresyncMain {
-  z-index: 3;
+  z-index: 1;
   height: 195px;
   background: #FFFFFF; 
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
 }
 
-/*Header Classes*/
-.caresyncHeader {
-  background: rgba(0,0,0,0.1);
-  height: 15px;
-  padding: 10px;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: horizontal;
-  gap: 8px;
-}
-
-.caresyncHeaderTitleFont {
-  font-size: 18px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-  color: rgba(5,170,255,1);
- 
-  margin: 0px;
-}
-
-.caresyncHeaderSubtextFont {
-  font-size: 7px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  color: rgba(255,255,255,1);
-}
-
-.caresyncHeaderButtonWrapper {
-  margin-left: auto;
-  display: flex;
-  flex-direction: horizontal;
-  gap: 5px;
-}
-
-.caresyncHeaderButton {
-  background: rgba(0,0,0,0);
-  height: 20px;
-  width: 20px;
-}
-
-/*Content Classes*/
-.caresyncContent {
-  flex: 1;
-  display: flex;
-  flex-direction: horizontal;
-  justify-content: center;
-  gap: 15px;
-  padding: 10px;
-}
-
-.caresyncDisplay {
-  height: 150px;
-  width: 150px;
-}
-
-.caresyncDescription {
-  /*background: rgba(255,255,255,0.05);*/
-  height: 250px;
-  width: 300px;
-  padding: 7px;
-  
-  /*border: 1px solid rgba(255,200,255,0.25);
-  border-radius: 15px;*/
-}
-
-.caresyncDescriptionTitle {
-  font-size: 13px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-  color: rgba(40,60,80,1);
-}
-
-.caresyncDescriptionText {
-  font-size: 10px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  color: rgba(60,75,90,1);
-  text-align: justify;
-  text-align-last: left;
-
-}
-
-/*Footer*/
-.caresyncFooter {
-  background: rgba(0,0,0,0.6);
-  height: 23px;
-  padding-left: 7px;
-  display: flex;
-  flex-direction: horizontal;
-}
-
-.caresyncStackText {
-  font-size: 7px; 
-  font-family: 'JetBrains Mono', 'Courier New', Courier, monospace; 
-  font-weight: 500; 
+.caresyncBackground {
+  height: 105%;
+  width: 100%;
+  object-fit: contain;
+  z-index: 3;
 }
