--- a/src/projectsPage/Projects/Phonix.css
+++ b/src/projectsPage/Projects/Phonix.css
@@ -2,106 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap');
 
 .phonixMain {
-  z-index: 3;
-  height: 495px;
-  background: linear-gradient(#0d0021, #1c0045);
-
+  z-index: 1;
+  height: 195px;
+  background: #FFFFFF; 
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
 }
 
-/*Header Classes*/
-.phonixHeader {
-  background: rgba(0,0,0,0.3);
-  height: 45px;
-  padding: 10px;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: horizontal;
-  gap: 8px;
-}
-
-.phonixHeaderTitleFont {
-  font-size: 30px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-  color: rgba(255,130,0,1);
- 
-  margin: 0px;
-}
-
-.phonixHeaderSubtextFont {
-  font-size: 15px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  color: rgba(255,255,255,1);
-}
-
-.phonixHeaderButtonWrapper {
-  margin-left: auto;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.phonixHeaderButton {
-  background: rgba(0,0,0,0);
-  height: 40px;
-  width: 40px;
-}
-
-/*Content Classes*/
-.phonixContent {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 30px;
-}
-
-.phonixDisplay {
-  height: 300px;
-  width: 300px;
-}
-
-.phonixDescription {
-  /*background: rgba(255,255,255,0.05);*/
-  height: 250px;
-  width: 250px;
-  padding: 15px;
-  
-  /*border: 1px solid rgba(255,200,255,0.25);
-  border-radius: 15px;*/
-}
-
-.phonixDescriptionTitle {
-  font-size: 20px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-  color: rgba(220,220,220,1);
-}
-
-.phonixDescriptionText {
-  font-size: 15px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  color: rgba(200,200,200,1);
-  text-align: justify;
-  text-align-last: left;
-
-}
-
-/*Footer*/
-.phonixFooter {
-  background: rgba(0,0,0,0.3);
-  height: 45px;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: horizontal;
-}
-
-.phonixStackText {
-  font-size: 13px; 
-  font-family: 'JetBrains Mono', 'Courier New', Courier, monospace; 
-  font-weight: 500; 
+.phonixBackground {
+  height: 105%;
+  width: 100%;
+  object-fit: contain;
+  z-index: 3;
 }
